--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gl-transitions",
-  "version": "1.44.0",
+  "version": "1.44.0-custom.1",
   "description": "The open collection of GL Transitions",
   "main": "index.js",
   "repository": {
