Revert "added new custom version number"
This reverts commit 4fec90cd28403f7538568f72f93b2ff86b9757ab.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gl-transitions",
-  "version": "1.44.0-custom.1",
+  "version": "1.44.0",
   "description": "The open collection of GL Transitions",
   "main": "index.js",
   "repository": {
